--- a/trunk/Friends/.classpath
+++ b/trunk/Friends/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/htmllexer.jar"/>
 	<classpathentry kind="lib" path="lib/htmlparser.jar"/>
+	<classpathentry kind="lib" path="lib/FreePastry-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
