--- a/trunk/Friends/.classpath
+++ b/trunk/Friends/.classpath
@@ -5,6 +5,9 @@
 	<classpathentry kind="lib" path="lib/htmllexer.jar"/>
 	<classpathentry kind="lib" path="lib/htmlparser.jar"/>
 	<classpathentry kind="lib" path="lib/FreePastry-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.10-bin.jar"/>
+	<classpathentry kind="lib" path="lib/javax.persistence_1.99.0.v200906021518.jar"/>
+	<classpathentry kind="lib" path="lib/eclipselink.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
