--- a/Friends/.classpath
+++ b/Friends/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/eclipselink.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/je-3.2.13.jar"/>
+	<classpathentry kind="lib" path="lib/FreePastry-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
